@@ -51,13 +51,12 @@ import fr.univlorraine.ecandidat.views.windows.ConfirmWindow;
 
 /**
  * Gestion des batchs
- *
  * @author Kevin Hergalant
  */
 @Component
 public class BatchController {
 
-	private Logger logger = LoggerFactory.getLogger(BatchController.class);
+	private final Logger logger = LoggerFactory.getLogger(BatchController.class);
 
 	/* Injections */
 	@Resource
@@ -88,6 +87,9 @@ public class BatchController {
 	private transient CandidatureGestionController candidatureGestionController;
 
 	@Resource
+	private transient OpiController opiController;
+
+	@Resource
 	private transient DemoController demoController;
 
 	@Resource
@@ -107,7 +109,7 @@ public class BatchController {
 
 	/** @return liste des batchs */
 	public List<Batch> getBatchs() {
-		List<Batch> liste = batchRepository.findAll();
+		final List<Batch> liste = batchRepository.findAll();
 		liste.forEach(batch -> batch.setLastBatchHisto(getLastBatchHisto(batch)));
 		return liste;
 	}
@@ -115,11 +117,11 @@ public class BatchController {
 	/** @return les informations de run des batchs */
 	public String getInfoRun() {
 		/* On cherche le dernier lancement */
-		BatchRun run = batchRunRepository.findFirst1By();
+		final BatchRun run = batchRunRepository.findFirst1By();
 
 		/* Calcul du batchFixedRate */
-		Integer batchFixedRateInt = MethodUtils.getStringMillisecondeToInt(batchFixedRate);
-		String batchFixedRateLabel = MethodUtils.getIntMillisecondeToString(batchFixedRateInt);
+		final Integer batchFixedRateInt = MethodUtils.getStringMillisecondeToInt(batchFixedRate);
+		final String batchFixedRateLabel = MethodUtils.getIntMillisecondeToString(batchFixedRateInt);
 
 		/* Le dernier lancement */
 		String datLastCheckRunLabel;
@@ -134,17 +136,19 @@ public class BatchController {
 		if (run == null) {
 			datNextCheckRunLabel = "-";
 		} else {
-			datNextCheckRunLabel = formatterDateTime.format(run.getDatLastCheckRun().plus(new Long(batchFixedRateInt), ChronoUnit.MILLIS));
+			datNextCheckRunLabel = formatterDateTime.format(run.getDatLastCheckRun().plus(Long.valueOf(batchFixedRateInt), ChronoUnit.MILLIS));
 		}
 
-		return applicationContext.getMessage("batch.info.run", new Object[] {batchFixedRateLabel, datLastCheckRunLabel, datNextCheckRunLabel}, UI.getCurrent().getLocale());
+		return applicationContext.getMessage("batch.info.run",
+			new Object[]
+			{ batchFixedRateLabel, datLastCheckRunLabel, datNextCheckRunLabel },
+			UI.getCurrent().getLocale());
 	}
 
 	/**
 	 * Renvoie la deniere execution
-	 *
-	 * @param batch
-	 * @return la derniere execution de batch
+	 * @param  batch
+	 * @return       la derniere execution de batch
 	 */
 	public BatchHisto getLastBatchHisto(final Batch batch) {
 		return batchHistoRepository.findFirst1ByBatchCodBatchOrderByIdBatchHistoDesc(batch.getCodBatch());
@@ -157,9 +161,8 @@ public class BatchController {
 
 	/**
 	 * Ouvre une fenêtre d'historique du batch.
-	 *
 	 * @param batch
-	 *            le batch
+	 *                  le batch
 	 */
 	public void showBatchHisto(final Batch batch) {
 		Assert.notNull(batch, applicationContext.getMessage("assert.notNull", null, UI.getCurrent().getLocale()));
@@ -168,9 +171,8 @@ public class BatchController {
 
 	/**
 	 * Ouvre une fenêtre d'édition de batch.
-	 *
 	 * @param batch
-	 *            le batch a editer
+	 *                  le batch a editer
 	 */
 	public void editBatch(final Batch batch) {
 		Assert.notNull(batch, applicationContext.getMessage("assert.notNull", null, UI.getCurrent().getLocale()));
@@ -179,16 +181,15 @@ public class BatchController {
 		if (!lockController.getLockOrNotify(batch, null)) {
 			return;
 		}
-		AdminBatchWindow bw = new AdminBatchWindow(batch);
+		final AdminBatchWindow bw = new AdminBatchWindow(batch);
 		bw.addCloseListener(e -> lockController.releaseLock(batch));
 		UI.getCurrent().addWindow(bw);
 	}
 
 	/**
 	 * Enregistre un batch
-	 *
 	 * @param batch
-	 *            le batch a enregistrer
+	 *                  le batch a enregistrer
 	 */
 	public void saveBatch(final Batch batch) {
 		Assert.notNull(batch, applicationContext.getMessage("assert.notNull", null, UI.getCurrent().getLocale()));
@@ -204,10 +205,9 @@ public class BatchController {
 
 	/**
 	 * AJoute une descriptio nau batch
-	 *
-	 * @param batchHisto
-	 * @param description
-	 * @return l'historique enregistré
+	 * @param  batchHisto
+	 * @param  description
+	 * @return             l'historique enregistré
 	 */
 	public BatchHisto addDescription(final BatchHisto batchHisto, final String description) {
 		if (description == null) {
@@ -224,13 +224,14 @@ public class BatchController {
 
 	/**
 	 * Lancement immediat du batch
-	 *
 	 * @param batch
 	 */
 	public void runImmediatly(final Batch batch) {
-		ConfirmWindow win = new ConfirmWindow(applicationContext.getMessage("batch.immediat.ok", new Object[] {batch.getCodBatch()}, UI.getCurrent().getLocale()));
+		final ConfirmWindow win =
+			new ConfirmWindow(applicationContext.getMessage("batch.immediat.ok", new Object[]
+			{ batch.getCodBatch() }, UI.getCurrent().getLocale()));
 		win.addBtnOuiListener(e -> {
-			BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
+			final BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
 			if (histo == null) {
 				batch.setTemIsLaunchImediaBatch(true);
 				batchRepository.saveAndFlush(batch);
@@ -244,13 +245,14 @@ public class BatchController {
 
 	/**
 	 * Lancement immediat du batch
-	 *
 	 * @param batch
 	 */
 	public void cancelRunImmediatly(final Batch batch) {
-		ConfirmWindow win = new ConfirmWindow(applicationContext.getMessage("batch.immediat.cancel", new Object[] {batch.getCodBatch()}, UI.getCurrent().getLocale()));
+		final ConfirmWindow win =
+			new ConfirmWindow(applicationContext.getMessage("batch.immediat.cancel", new Object[]
+			{ batch.getCodBatch() }, UI.getCurrent().getLocale()));
 		win.addBtnOuiListener(e -> {
-			BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
+			final BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
 			if (histo == null) {
 				batch.setTemIsLaunchImediaBatch(false);
 				batchRepository.saveAndFlush(batch);
@@ -266,16 +268,16 @@ public class BatchController {
 	@Scheduled(fixedDelayString = "${batch.fixedRate}")
 	public void checkBatchRun() {
 		if (!loadBalancingController.isLoadBalancingCandidatMode()) {
-			List<BatchRun> liste = batchRunRepository.findAll();
+			final List<BatchRun> liste = batchRunRepository.findAll();
 			if (liste != null && liste.size() == 1) {
-				BatchRun lastBatchRun = liste.get(0);
-				List<Batch> listeBatch = batchRepository.findByTesBatch(true);
+				final BatchRun lastBatchRun = liste.get(0);
+				final List<Batch> listeBatch = batchRepository.findByTesBatch(true);
 				logger.trace("Vérification lancement lastChek = " + lastBatchRun.getDatLastCheckRun() + " - Now = " + LocalDateTime.now());
 
 				/* Suppression du dernier batch run */
 				nettoyageBatchRun();
 				listeBatch.forEach(batch -> {
-					BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
+					final BatchHisto histo = batchHistoRepository.findByBatchCodBatchAndStateBatchHisto(batch.getCodBatch(), ConstanteUtils.BATCH_RUNNING);
 					if (histo == null && isNeededToLaunch(batch, lastBatchRun.getDatLastCheckRun())) {
 						logger.debug("Le batch " + batch.getCodBatch() + " doit être lancé");
 						runJob(batch);
@@ -295,10 +297,9 @@ public class BatchController {
 
 	/**
 	 * Vérifie si le batch doit être lancé grace a son schedul
-	 *
-	 * @param batch
-	 * @param lastExec
-	 * @return true si le batch doit etre lance ou non
+	 * @param  batch
+	 * @param  lastExec
+	 * @return          true si le batch doit etre lance ou non
 	 */
 	private Boolean isNeededToLaunch(final Batch batch, final LocalDateTime lastExec) {
 		/* Vérification si le batch doit etre lancé immediatement */
@@ -307,18 +308,17 @@ public class BatchController {
 			batchRepository.saveAndFlush(batch);
 			return true;
 		}
-		LocalDateTime now = LocalDateTime.now();
+		final LocalDateTime now = LocalDateTime.now();
 
 		/* Vérification si le batch doit etre lancé à une date précise */
 		if (batch.getFixeYearBatch() != null && batch.getFixeMonthBatch() != null && batch.getFixeDayBatch() != null) {
-			if (now.getYear() != batch.getFixeYearBatch() || now.getMonth().getValue() != batch.getFixeMonthBatch() || now.getDayOfMonth() != batch.getFixeDayBatch()) {
+			if (now.getYear() != batch.getFixeYearBatch() || now.getMonth().getValue() != batch.getFixeMonthBatch()
+				|| now.getDayOfMonth() != batch.getFixeDayBatch()) {
 				return false;
 			}
 		}
-		/*
-		 * Vérification si le batch doit etre lancé annuelement avec un mois donné et un
-		 * jour donné
-		 */
+		/* Vérification si le batch doit etre lancé annuelement avec un mois donné et un
+		 * jour donné */
 		if (batch.getFixeMonthBatch() != null && batch.getFixeDayBatch() != null) {
 			if (now.getMonth().getValue() != batch.getFixeMonthBatch() || now.getDayOfMonth() != batch.getFixeDayBatch()) {
 				return false;
@@ -331,11 +331,9 @@ public class BatchController {
 			}
 		}
 
-		/*
-		 * Sinon vérification si le batch doit etre lancé hebdo avec les jours précisés
-		 */
+		/* Sinon vérification si le batch doit etre lancé hebdo avec les jours précisés */
 		else {
-			DayOfWeek today = now.getDayOfWeek();
+			final DayOfWeek today = now.getDayOfWeek();
 			if (!batch.getTemLundiBatch() && today.getValue() == 1) {
 				return false;
 			} else if (!batch.getTemMardiBatch() && today.getValue() == 2) {
@@ -355,7 +353,7 @@ public class BatchController {
 
 		logger.trace(batch.getCodBatch() + " - OK à lancer aujourd'hui");
 		if (batch.getTemFrequenceBatch()) {
-			Integer frequence = batch.getFrequenceBatch();
+			final Integer frequence = batch.getFrequenceBatch();
 			if (frequence == null || frequence.compareTo(0) != 1) {
 				return false;
 			} else {
@@ -363,7 +361,7 @@ public class BatchController {
 				if (execBatch == null) {
 					return true;
 				} else {
-					execBatch = execBatch.plusMinutes(new Long(frequence));
+					execBatch = execBatch.plusMinutes(Long.valueOf(frequence));
 					if (execBatch.isBefore(lastExec)) {
 						logger.trace(batch.getCodBatch() + " - OK à lancer maintenant, frequence = " + frequence + ", lastExec = " + lastExec);
 						return true;
@@ -382,7 +380,6 @@ public class BatchController {
 
 	/**
 	 * Lance un batch
-	 *
 	 * @param batch
 	 */
 	private void runJob(Batch batch) {
@@ -412,13 +409,13 @@ public class BatchController {
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_DESTRUCT_DOSSIER)) {
 				candidatureGestionController.launchBatchDestructDossier(batchHisto);
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_ASYNC_OPI)) {
-				candidatureGestionController.launchBatchAsyncOPI(batchHisto);
+				opiController.launchBatchAsyncOPI(batchHisto);
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_DESTRUCT_HISTO)) {
 				cleanHistoBatch();
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_DEMO) && demoController.getDemoMode()) {
 				demoController.launchDemoBatch();
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_ASYNC_OPI_PJ)) {
-				candidatureGestionController.launchBatchAsyncOPIPj(batchHisto);
+				opiController.launchBatchAsyncOPIPj(batchHisto);
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_DESIST_AUTO)) {
 				candidatureGestionController.desistAutoCandidature(batchHisto);
 			} else if (batch.getCodBatch().equals(NomenclatureUtils.BATCH_RELANCE_FAVO)) {
@@ -428,7 +425,7 @@ public class BatchController {
 			}
 
 			batchHisto.setStateBatchHisto(ConstanteUtils.BATCH_FINISH);
-		} catch (Exception e) {
+		} catch (final Exception e) {
 			logger.error("Erreur de lancement du batch " + batch.getCodBatch(), e);
 			batchHisto.setStateBatchHisto(ConstanteUtils.BATCH_ERROR);
 		}
@@ -441,7 +438,8 @@ public class BatchController {
 
 	/** Batch de nettoyage de l'historique des batchs */
 	private void cleanHistoBatch() {
-		List<BatchHisto> listHisto = batchHistoRepository.findByDateDebBatchHistoLessThan(LocalDateTime.now().minusDays(parametreController.getNbJourKeepHistoBatch()));
+		final List<BatchHisto> listHisto =
+			batchHistoRepository.findByDateDebBatchHistoLessThan(LocalDateTime.now().minusDays(parametreController.getNbJourKeepHistoBatch()));
 		if (listHisto != null && listHisto.size() > 0) {
 			batchHistoRepository.deleteInBatch(listHisto);
 		}
@@ -449,12 +447,12 @@ public class BatchController {
 
 	/** Batch de nettoyage des batchs */
 	public void nettoyageBatch(final Integer plusHour) {
-		List<BatchHisto> listHisto = batchHistoRepository.findByStateBatchHisto(ConstanteUtils.BATCH_RUNNING);
+		final List<BatchHisto> listHisto = batchHistoRepository.findByStateBatchHisto(ConstanteUtils.BATCH_RUNNING);
 		listHisto.forEach(batchHisto -> {
 			if (plusHour.equals(0)) {
 				interruptBatch(batchHisto);
 			} else {
-				LocalDateTime histPlusHour = batchHisto.getDateDebBatchHisto().plusHours(new Long(plusHour));
+				final LocalDateTime histPlusHour = batchHisto.getDateDebBatchHisto().plusHours(Long.valueOf(plusHour));
 				if (histPlusHour.isBefore(LocalDateTime.now())) {
 					interruptBatch(batchHisto);
 				}
@@ -464,7 +462,6 @@ public class BatchController {
 
 	/**
 	 * Interrompt un batch
-	 *
 	 * @param batchHisto
 	 */
 	private void interruptBatch(final BatchHisto batchHisto) {
